--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -1,4 +1,7 @@
+html, body {
+  height: 100%;
+}
+
 .wrapper {
-  // fix footer appearing below safari bar
-  min-height: calc(100vh - env(safe-area-inset-bottom) - env(safe-area-inset-top));
+  min-height: 100%;
 }
